# rag-demo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: Pulumi.development.yaml  Pulumi.production.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
rag_solution/: db.py  main.py  rate_limiter.py  settings.py  singleton_worker_pool.py
rag_solution/data-ingestion/: README.md  example_usage.py  ingest.py  ingestion_config.py  model.py
rag_solution/data_ingestion/: README.md  api_client.py  document_chunker.py  document_processor.py  example_usage.py  ingest.py  ingestion_config.py  model.py
rag_solution/models/: db.py  documents.py  health.py
rag_solution/routers/: documents.py  health.py
scripts/: build_container.sh  fetch_sentence_transformer_model.py  fetch_sentence_transformer_model.sh
tests/: test_db.py  test_documents_router.py  test_ingest.py
tests/data-ingestion/: test_api_client.py  test_document_chunker.py  test_document_processor.py  test_ingest.py
